--- a/manual/manual.tex
+++ b/manual/manual.tex
@@ -44,6 +44,7 @@ built out of these primitives.
 \include{graphics}
 \include{path}
 \include{canvas}
+\include{document}
 \include{text}
 \include{graph}
 \include{axis}
