--- a/faq/pyxfaq.tex
+++ b/faq/pyxfaq.tex
@@ -278,7 +278,7 @@ g = graph.graphxy(width=10,\\
 ~~~~~~~~~~~~~~~~~~x=graph.axis.linear(min=-2, max=2)\\
 ~~~~~~~~~~~~~~~~~~)\\
 \\
-g.plot(graph.data.function("y=x**2"))\\
+g.plot(graph.data.function("y(x)=x**2"))\\
 \\
 g.writeEPSfile("x")
 \end{progcode}
