--- a/CHANGES
+++ b/CHANGES
@@ -6,7 +6,6 @@ TODO:
   - text module:
     - SlantFont & Co support
     - keep an eye on PEP 324 (popen 5): it could make the texrunner much easier
-    - newline removal when not disturbing texmessages only
   - graph.graph module
     - common bboxes for different graphs
     - 3d graphs, circular graphs
@@ -150,6 +149,10 @@ TODO before release:
     - dvicopy flag removed
     - allow argument of set to be None
     - rename nomathmode and nophantom to clearmathmode and clearphantom
+    - texmessagepattern for easy creation of simple TeX message parsers
+    - allow long file names in file checking TeX message parsers
+    - no newline removal to not disturbe TeX messages when reporting errors
+    - reworked documentation to match the python documentation standards
   - tex module:
     - the very old tex module finally got removed completely
   - style module:
