--- a/CHANGES
+++ b/CHANGES
@@ -210,7 +210,7 @@ TODO before release:
     - support for string initialization removed
     - support for initialisation with other length removed
     - lengths can now be divided by other lengths (as suggested by Michael Gruber
-      and Magnus Lie HHetland)
+      and Magnus Lie Hetland)
   - text module:
     - postpone reading of fontmap files until TeX/LaTeX is started
     - sign of font number in dvifile (reported by Michael Gruber)
