--- a/CHANGES
+++ b/CHANGES
@@ -165,6 +165,9 @@ TODO before release:
   - deformer module:
     - improve the smoothing deformer
     - add a parallel deformer
+  - contrib directory:
+    - a simple converter from dvi to EPS/PS/PDF files (dviconvert.py) has been added
+    - a simple imagine to EPS/PS/PDF converter (imgconvert.py) has been added
   - update address of FSF all over the place
 
 
@@ -265,9 +268,6 @@ TODO before release:
     - trafos are now deformers
   - examples:
     - a bunch of bargraph examples have been added
-  - contrib:
-    - a simple converter from dvi to EPS/PS/PDF files (dviconvert.py) has been added
-    - a simple imagine to EPS/PS/PDF converter (imgconvert.py) has been added
 
 
 0.6.x (????/??/??):
