proper sectioning is important for building the manual!!!
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@2270 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/manual/pattern.tex
+++ b/manual/pattern.tex
@@ -11,7 +11,7 @@ predefined hatch patterns are included.
 
 \declaremodule{}{pattern}
 
-\subsection{Class \class{pattern}}
+\section{Class \class{pattern}}
 
 The classes \class{pattern} and \class{canvas} differ only in their
 constructor and in the absence of a \method{writeEPSfile()} method in
