final cleanups for 0.8
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@2277 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/manual/axis.tex
+++ b/manual/axis.tex
@@ -56,7 +56,7 @@ of the features of the axis with a few lines of code each. Hence we
 can here directly come to the reference of the available
 components. % }}}
 
-\section{Axes} % {{{
+\section{Module \module{graph.axis.axis}: Axes} % {{{
 
 \declaremodule{}{graph.axis.axis}
 \modulesynopsis{Axes}
@@ -219,7 +219,7 @@ The \module{axis} has two classes implementing so called anchored
 axes, which combine an axis with an positioner and a storage place for
 axis related data. Since these features are not interesting for the
 average \PyX{} user, we'll not go into the details of their paramters
-and except for some handy axis positions methods:
+and except for some handy axis position methods:
 
 \begin{methoddesc}[anchoredaxis]{basepath}{x1=None, x2=None}
   Returns a path instance for the base path. \var{x1} and \var{x2}
@@ -271,7 +271,7 @@ to create an anchored axis along an arbitrary path:
   (left) and \code{-1} (right).
 \end{funcdesc} % }}}
 
-\section{Ticks} % {{{
+\section{Module \module{graph.axis.tick}: Ticks} % {{{
 
 \declaremodule{}{graph.axis.tick}
 \modulesynopsis{Axes ticks}
@@ -324,7 +324,7 @@ The following classes are part of the module \module{graph.axis.tick}.
   the attributes for the labels.
 \end{classdesc} % }}}
 
-\section{Partitioners} % {{{
+\section{Module \module{graph.axis.parter}: Partitioners} % {{{
 
 \declaremodule{}{graph.axis.parter}
 \modulesynopsis{Axes partitioners}
@@ -476,7 +476,7 @@ This class is an abbreviation of \class{logarithmic} described above.
 This class is an abbreviation of \class{autologarithmic} described above.
 \end{classdesc} % }}}
 
-\section{Texter} % {{{
+\section{Module \module{graph.axis.texter}: Texter} % {{{
 
 \declaremodule{}{graph.axis.texter}
 \modulesynopsis{Axes texters}
@@ -624,7 +624,7 @@ above.
   \var{labelattrs} has the same meaning as for \var{decimal}.
 \end{classdesc} % }}}
 
-\section{Painter} % {{{
+\section{Module \module{graph.axis.painter}: Painter} % {{{
 
 \declaremodule{}{graph.axis.painter}
 \modulesynopsis{Axes painters}
@@ -822,7 +822,7 @@ $\sqrt{2}$.
   suitable for linked split axes.
 \end{classdesc} % }}}
 
-\section{Rater} % {{{
+\section{Module \module{graph.axis.rater}: Rater} % {{{
 
 \declaremodule{}{graph.axis.rater}
 \modulesynopsis{Axes raters}
@@ -910,7 +910,7 @@ receive a bad rating as well.
   This class is an abbreviation of \class{logarithmic} described above.
 \end{classdesc} % }}}
 
-\section{Positioners} % {{{
+\section{Module \module{graph.axis.positioner}: Positioners} % {{{
 
 \declaremodule{}{graph.axis.positioners}
 \modulesynopsis{Axes positioners}
