--- a/manual/manual.tex
+++ b/manual/manual.tex
@@ -14,8 +14,7 @@
 \usepackage{units}    % TODO: get rid of that
 
 \title{\PyX{} Reference Manual}
-\author{J\"org Lehmann\\
-Andr\'e Wobst}
+\author{J\"org Lehmann, Andr\'e Wobst}
 \authoraddress{http://pyx.sourceforge.net/}
 \date{\input{pyxdate.tex}}
 \release{\input{pyxversion.tex}}
