--- a/manual/text.tex
+++ b/manual/text.tex
@@ -1,4 +1,4 @@
-\chapter[Module text: TeX/LaTeX interface]{Module \module{text}: \TeX/\LaTeX{} interface}
+\chapter{Module \module{text}: \TeX/\LaTeX{} interface}
 \label{module:text}
 
 \section{Basic functionality}
@@ -32,7 +32,7 @@ alternative font mapping files like \texttt{psfonts.cmz} in the global
 the \var{fontmaps} keyword argument of the \class{texrunner}
 constructor or its \method{set()} method.
 
-\section[TeX/LaTeX instances: the texrunner class]{\TeX/\LaTeX{} instances: the \class{texrunner} class}
+\section{\TeX/\LaTeX{} instances: the \class{texrunner} class}
 \declaremodule{}{text}
 \modulesynopsis{\TeX/\LaTeX interface}
 
@@ -192,7 +192,7 @@ instance is started when the \method{text()} method is called again.
 \end{methoddesc}
 
 
-\section[TeX/LaTeX attributes]{\TeX/\LaTeX{} attributes}
+\section{\TeX/\LaTeX{} attributes}
 \declaremodule{}{text}
 \modulesynopsis{\TeX/\LaTeX interface}
 
@@ -439,7 +439,7 @@ attribute) are available at module level.
   Skip the text in the box, but keep its size.
 \end{datadesc}
 
-\section[Using the graphics-bundle with LaTeX]{Using the graphics-bundle with \LaTeX}
+\section{Using the graphics-bundle with \LaTeX}
 
 The packages in the \LaTeX{} graphics bundle (\texttt{color.sty},
 \texttt{graphics.sty}, \texttt{graphicx.sty}, \ldots) make extensive
@@ -505,7 +505,7 @@ For reference purpose, the following specials can be handled by the
   ends rotation.
 \end{description}
 
-\section[TeX message parsers]{\TeX{} message parsers}
+\section{\TeX{} message parsers}
 \declaremodule{}{text}
 \modulesynopsis{\TeX/\LaTeX interface}
 
@@ -571,7 +571,7 @@ The following \TeX{} message parser instances are available:
   this class.
 \end{classdesc}
 
-\section{The defaulttexrunner instance}
+\section{The \member{defaulttexrunner} instance}
 \declaremodule{}{text}
 \modulesynopsis{\TeX/\LaTeX interface}
 
