--- a/manual/graph.tex
+++ b/manual/graph.tex
@@ -116,7 +116,7 @@ continuous development quite clearly. The basic parts of a graph are:
   subtasks. Axes are discussed separately in chapter~\ref{axis}.
 \end{definitions} % }}}
 
-\section{Module graph.graph: X-Y-Graphs} % {{{
+\section{Module \module{graph.graph}: X-Y-Graphs} % {{{
 \label{graph:graph}
 
 \declaremodule{}{graph.graph}
@@ -310,7 +310,7 @@ available after \method{dolayout()} as \class{graphxy} methods
   coordinates).
 \end{methoddesc} % }}}
 
-\section{Module graph.data: Data} % {{{
+\section{Module \module{graph.data}: Data} % {{{
 \label{graph:data}
 
 \declaremodule{}{graph.data}
@@ -536,7 +536,7 @@ For the sake of completeness we list the default patterns:
   data.
 \end{classdesc} % }}} % }}}
 
-\section{Module graph.style: Styles} % {{{
+\section{Module \module{graph.style}: Styles} % {{{
 \label{graph:style}
 
 \declaremodule{}{graph.style}
@@ -824,7 +824,7 @@ definition is:
   deco.stroked([color.grey.black])]}.
 \end{classdesc} % }}} % }}}
 
-\section{Module graph.key: Keys} % {{{
+\section{Module \module{graph.key}: Keys} % {{{
 \label{graph:key}
 
 \declaremodule{}{graph.key}
