fix bug in postscript deco code for stroking only attributes
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@2288 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -72,6 +72,11 @@ TODO:
       graph data
 
 
+0.8.1 (2005/07/??):
+  - deco module:
+    - fix bug in postscript deco code for stroking only attributes
+
+
 0.8 (2005/07/13):
   - changed requirements to python 2.1 or newer:
     - nested scopes are needed without fallback solution by the path module
