document kpathsea changes
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@2306 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -85,6 +85,8 @@ TODO:
     - fix a typo
   - pattern module:
     - issue a warning when not using a stroke color for patterns
+  - kpathsea module:
+    - caching in fallback to weaken lower system call bottleneck
 
 
 0.8 (2005/07/13):
