corrected what could have been a Freudian typo if Andre would have written it.
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@2309 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/manual/document.tex
+++ b/manual/document.tex
@@ -54,7 +54,7 @@ A \class{document} can be written to a file using one of the following methods:
 \end{methoddesc}
 
 \begin{methoddesc}{writePDFfile}{filename, *args, **kwargs}
-  Write a single page \class{document} to a PDS file, passing
+  Write a single page \class{document} to a PDF file, passing
   \var{args} and \var{kwargs} to the \class{pdfwriter} instance
   created for writing.
 \end{methoddesc}
