- add missing writePSfile wrapper (thanks to Gert-Ingold for reporting this   omission) - add *args to writeEPSfile and writePDFfile wrappers
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@2310 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -87,6 +87,9 @@ TODO:
     - issue a warning when not using a stroke color for patterns
   - kpathsea module:
     - caching in fallback to lower system call bottleneck
+  - canvas module:
+    - add missing writePSfile wrapper
+    - add *args to writeEPSfile and writePDFfile wrappers
 
 
 0.8 (2005/07/13):
