correct description regarding the manual in the README file (thanks to Gert Ingold for pointing this out)
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@2311 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -90,6 +90,7 @@ TODO:
   - canvas module:
     - add missing writePSfile wrapper
     - add *args to writeEPSfile and writePDFfile wrappers
+  - correct description regarding the manual in the README file
 
 
 0.8 (2005/07/13):
