--- a/README
+++ b/README
@@ -14,10 +14,10 @@ The installation of PyX is described in the file INSTALL.
 Documentation
 -------------
 
-A prebuilt version of the manual is distributed in manual/manual.pdf. For
-answers to frequently asked questions, we refer to pyx/pyxfaq.pdf. We also
-recommend taking a look on the nice examples for the use of PyX, which can be
-found in the examples directory.
+A prebuilt version of the manual can be found on the PyX webpage under
+http://pyx.sourceforge.net/manual.pdf. For answers to frequently asked
+questions, we refer to pyx/pyxfaq.pdf. We also recommend taking a look on the
+nice examples for the use of PyX, which can be found in the examples directory.
 
 License
 -------
