document linestyle rellength fix
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@2316 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -81,6 +81,7 @@ TODO:
     - fix multicurveto._normalized
     - fix path.paramtoarclen and path.paramtoarclen_pt 
     - remove unused method-local function
+    - fix linestyle rellength in PostScript
   - epsfile module:
     - fix a typo
   - pattern module:
