correction to the rounding problems in circles (reported by Uwe Fabricius)
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@2317 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -82,6 +82,7 @@ TODO:
     - fix path.paramtoarclen and path.paramtoarclen_pt 
     - remove unused method-local function
     - fix linestyle rellength in PostScript
+    - correction to the rounding problems in circles (reported by Uwe Fabricius)
   - epsfile module:
     - fix a typo
   - pattern module:
