--- a/manual/document.tex
+++ b/manual/document.tex
@@ -48,13 +48,13 @@ A \class{document} can be written to a file using one of the following methods:
 \end{methoddesc}
 
 \begin{methoddesc}{writePSfile}{filename, *args, **kwargs}
-  Write a single page \class{document} to a PS file, passing
+  Write \class{document} to a PS file, passing
   \var{args} and \var{kwargs} to the \class{pswriter} instance
   created for writing.
 \end{methoddesc}
 
 \begin{methoddesc}{writePDFfile}{filename, *args, **kwargs}
-  Write a single page \class{document} to a PDF file, passing
+  Write \class{document} to a PDF file, passing
   \var{args} and \var{kwargs} to the \class{pdfwriter} instance
   created for writing.
 \end{methoddesc}
