--- a/faq/glifaq.dtx
+++ b/faq/glifaq.dtx
@@ -368,7 +368,7 @@
   {\usepackage{tipa}%
    \newcommand{\tipagraph}[2]{\textipa{##1}}}%
   {\usepackage{graphicx}%
-   \newcommand{\tipagraph}[2]{\raisebox{-0.8ex}{\includegraphics{##2}}}}
+   \newcommand{\tipagraph}[2]{\raisebox{-2.727263bp}{\includegraphics{##2}}}}
 %    \end{macrocode}
 % When a backslash character is needed as part of a verbatim command name,
 % but verbatim code cannot be used, the macro |\cs| can be employed.
