--- a/faq/pyxfaq.tex
+++ b/faq/pyxfaq.tex
@@ -48,8 +48,8 @@ pronunciation are explained.
 
 Despite the ties between \TeX{} and \PyX{}, their pronunciation is quite
 different. According to the developers of \PyX{}, it should be pronounced as 
-\tipagraph{[pYks]}{tipa1.pdf}. Please do not pronounce it as 
-\tipagraph{[pYx]}{tipa2.pdf} or \tipagraph{[pY\c c]}{tipa3.pdf}.
+\tipagraph{[pYks]}{tipapyks}. Please do not pronounce it as 
+\tipagraph{[pYx]}{tipapyx} or \tipagraph{[pY\c c]}{tipapych}.
 }
 
 \question{a}{Where do I get the latest version of \PyX?}
