remove spurious spaces when checking texmessages for emptyness
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@2329 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -90,6 +90,7 @@ TODO:
   - text module:
     - postpone PDFfontdescriptor information, since it raises an error on certain
       fonts even when PostScript output was requested (reported by Gert Ingold)
+    - remove spurious spaces when checking for empty texmessages
   - kpathsea module:
     - caching in fallback to lower system call bottleneck
   - canvas module:
